--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "commit": "gitmoji -c",
-    "dev": "tsnd src/server.ts"
+    "dev": "tsnd src/server.ts",
+    "typeorm": "tsnd ./node_modules/typeorm/cli.js"
   },
   "repository": {
     "type": "git",
@@ -20,10 +21,15 @@
   "homepage": "https://github.com/junkajii/nlw-valoriza#readme",
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.4"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "reflect-metadata": "^0.1.13",
+    "sqlite3": "^5.0.2",
+    "typeorm": "^0.2.34",
+    "uuid": "^8.3.2"
   }
 }
